generic/kubernetes/operator-based/keycloak/keycloak-instance-domain-contour.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: keycloak-ingress
    annotations:
        # TLS secret for HTTPS (cert-manager will create this automatically)
        kubernetes.io/tls-acme: 'true'
spec:
    ingressClassName: contour
    tls:
        - hosts:
              - ${CAMUNDA_DOMAIN}
          secretName: camunda-keycloak-tls
    rules:
        - host: ${CAMUNDA_DOMAIN}
          http:
              paths:
                  - path: /auth
                    pathType: Prefix
                    backend:
                        service:
                            name: keycloak-service
                            port:
                                number: 18080
